--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heapdump",
+  "name": "@alesmenzel/heapdump",
   "version": "0.3.10",
   "description": "Make a dump of the V8 heap for later inspection.",
   "homepage": "https://github.com/bnoordhuis/node-heapdump",
